improvement of JUnit test-classes and added some README files